add hint for username field in edit profile

--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -43,6 +43,9 @@
     @if (form.get("userName").invalid && form.get("userName").touched) {
       <mat-error>Username is required</mat-error>
     }
+    @if(isEditMode){
+      <mat-hint>Username cannot be edited</mat-hint>
+    }
   </mat-form-field>
   <mat-form-field>
     <mat-label>Email</mat-label>
