--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -1,45 +1,54 @@
-<div class="login-container">
-  <mat-card class="login-card">
-    <mat-card-header>
-      <mat-card-title class="mb-3">Login</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <form
-        [formGroup]="form"
-        class="d-flex flex-column">
-        <mat-form-field>
-          <mat-label>Username</mat-label>
-          <input
-            matInput
-            type="text"
-            formControlName="userName" />
-          @if (form.get("userName").invalid && form.get("userName").touched) {
-            <mat-error>Username is required</mat-error>
-          }
-        </mat-form-field>
-        <mat-form-field>
-          <mat-label>Password</mat-label>
-          <input
-            matInput
-            type="password"
-            formControlName="password" />
-          @if (form.get("password").invalid && form.get("password").touched) {
-            <mat-error>Password is missing or invalid</mat-error>
-          }
-        </mat-form-field>
-        <button
-          mat-flat-button
-          color="primary"
-          [disabled]="form.invalid"
-          (click)="onSubmit(form.value)">
-          Login
-        </button>
-        <span class="mt-3">
-          Don't have an account? Click
-          <a [routerLink]="['/signup']">here</a>
-          to sign up
-        </span>
-      </form>
-    </mat-card-content>
-  </mat-card>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6 col-lg-4">
+      <div class="card shadow-lg p-4">
+        <h4 class="text-center mb-4">Login</h4>
+        <form [formGroup]="form" class="row">
+          <!-- Username -->
+          <div class="col-md-12">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Username</mat-label>
+              <input matInput type="text" formControlName="userName" />
+              @if (form.get("userName").invalid && form.get("userName").touched) {
+                <mat-error>Username is required</mat-error>
+              }
+            </mat-form-field>
+          </div>
+
+          <!-- Password -->
+          <div class="col-md-12">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Password</mat-label>
+              <input matInput type="password" formControlName="password" />
+              @if (form.get("password").invalid && form.get("password").touched) {
+                <mat-error>Password is missing or invalid</mat-error>
+              }
+            </mat-form-field>
+          </div>
+
+          <!-- Submit Button -->
+          <div class="col-md-12 text-center">
+            <button
+              mat-flat-button
+              color="primary"
+              class="w-100"
+              [disabled]="form.invalid"
+              (click)="onSubmit(form.value)"
+            >
+              Login
+            </button>
+          </div>
+
+          <!-- Signup Link -->
+          <div class="col-md-12 text-center">
+            <span>
+              Don't have an account? Click
+              <a [routerLink]="['/signup']">here</a>
+              to sign up
+            </span>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 </div>
