--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,96 +1,157 @@
-<h4>{{ isEditMode ? "Edit My Profile" : "User Registration" }}</h4>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8 col-lg-6">
+      <div class="card shadow-lg p-4">
+        <h4 class="text-center mb-4">
+          {{ isEditMode ? "Edit My Profile" : "User Registration" }}
+        </h4>
+        <form
+          [formGroup]="form"
+          class="row g-3">
+          <!-- First Name -->
+          <div class="col-md-6">
+            <mat-form-field
+              appearance="outline"
+              class="w-100">
+              <mat-label>First Name</mat-label>
+              <input
+                matInput
+                type="text"
+                formControlName="firstName" />
+              @if (
+                form.get("firstName").invalid && form.get("firstName").touched
+              ) {
+                <mat-error>First Name is required</mat-error>
+              }
+            </mat-form-field>
+          </div>
 
-<form
-  [formGroup]="form"
-  class="d-flex flex-column">
-  <mat-form-field>
-    <mat-label>First Name</mat-label>
-    <input
-      matInput
-      type="text"
-      formControlName="firstName" />
-    @if (form.get("firstName").invalid && form.get("firstName").touched) {
-      <mat-error>First Name is required</mat-error>
-    }
-  </mat-form-field>
-  <mat-form-field>
-    <mat-label>Last Name</mat-label>
-    <input
-      matInput
-      type="text"
-      formControlName="lastName" />
-    @if (form.get("lastName").invalid && form.get("lastName").touched) {
-      <mat-error>Last Name is required</mat-error>
-    }
-  </mat-form-field>
-  <mat-form-field>
-    <mat-label>Phone Number</mat-label>
-    <input
-      matInput
-      type="text"
-      formControlName="phoneNumber" />
-    @if (form.get("phoneNumber").invalid && form.get("phoneNumber").touched) {
-      <mat-error>Phone Number is required</mat-error>
-    }
-  </mat-form-field>
-  <mat-form-field>
-    <mat-label>Username</mat-label>
-    <input
-      matInput
-      type="text"
-      [readonly]="isEditMode"
-      formControlName="userName" />
-    @if (form.get("userName").invalid && form.get("userName").touched) {
-      <mat-error>Username is required</mat-error>
-    }
-    @if(isEditMode){
-      <mat-hint>Username cannot be edited</mat-hint>
-    }
-  </mat-form-field>
-  <mat-form-field>
-    <mat-label>Email</mat-label>
-    <input
-      matInput
-      type="text"
-      formControlName="email" />
+          <!-- Last Name -->
+          <div class="col-md-6">
+            <mat-form-field
+              appearance="outline"
+              class="w-100">
+              <mat-label>Last Name</mat-label>
+              <input
+                matInput
+                type="text"
+                formControlName="lastName" />
+              @if (
+                form.get("lastName").invalid && form.get("lastName").touched
+              ) {
+                <mat-error>Last Name is required</mat-error>
+              }
+            </mat-form-field>
+          </div>
 
-    @if (form.get("email").invalid && form.get("email").touched) {
-      <mat-error>Email is missing or invalid</mat-error>
-    }
-  </mat-form-field>
-  <mat-form-field>
-    <mat-label>Password</mat-label>
-    <input
-      matInput
-      type="password"
-      formControlName="password" />
-    @if (form.get("password").invalid && form.get("password").touched) {
-      <mat-error>Password is missing or invalid</mat-error>
-    }
-  </mat-form-field>
-  <mat-form-field>
-    <mat-label>Confirm Password</mat-label>
-    <input
-      matInput
-      type="password"
-      formControlName="confirmPassword" />
-    @if (form.get("confirmPassword").hasError("passwordMismatch")) {
-      <mat-error>Passwords do not match</mat-error>
-    } @else {
-      @if (
-        form.get("confirmPassword").invalid &&
-        form.get("confirmPassword").touched
-      ) {
-        <mat-error>Password is missing or invalid</mat-error>
-      }
-    }
-  </mat-form-field>
+          <!-- Username -->
+          <div class="col-md-6">
+            <mat-form-field
+              appearance="outline"
+              class="w-100">
+              <mat-label>Username</mat-label>
+              <input
+                matInput
+                type="text"
+                [readonly]="isEditMode"
+                formControlName="userName" />
+              @if (
+                form.get("userName").invalid && form.get("userName").touched
+              ) {
+                <mat-error>Username is required</mat-error>
+              }
+              @if (isEditMode) {
+                <mat-hint>Username cannot be edited</mat-hint>
+              }
+            </mat-form-field>
+          </div>
+          <!-- Email -->
+          <div class="col-md-6">
+            <mat-form-field
+              appearance="outline"
+              class="w-100">
+              <mat-label>Email</mat-label>
+              <input
+                matInput
+                type="text"
+                formControlName="email" />
+              @if (form.get("email").invalid && form.get("email").touched) {
+                <mat-error>Email is missing or invalid</mat-error>
+              }
+            </mat-form-field>
+          </div>
+          <!-- Phone Number -->
+          <div class="col-md-6">
+            <mat-form-field
+              appearance="outline"
+              class="w-100">
+              <mat-label>Phone Number</mat-label>
+              <input
+                matInput
+                type="text"
+                formControlName="phoneNumber" />
+              @if (
+                form.get("phoneNumber").invalid &&
+                form.get("phoneNumber").touched
+              ) {
+                <mat-error>Phone Number is required</mat-error>
+              }
+            </mat-form-field>
+          </div>
+          <!-- Password -->
+          <div class="col-md-6">
+            <mat-form-field
+              appearance="outline"
+              class="w-100">
+              <mat-label>Password</mat-label>
+              <input
+                matInput
+                type="password"
+                formControlName="password" />
+              @if (
+                form.get("password").invalid && form.get("password").touched
+              ) {
+                <mat-error>Password is missing or invalid</mat-error>
+              }
+            </mat-form-field>
+          </div>
 
-  <button
-    mat-flat-button
-    color="primary"
-    [disabled]="form.invalid"
-    (click)="onSubmit(form.value)">
-    {{ isEditMode ? "Update My Profile" : "Register" }}
-  </button>
-</form>
+          <!-- Confirm Password -->
+          <div class="col-md-6">
+            <mat-form-field
+              appearance="outline"
+              class="w-100">
+              <mat-label>Confirm Password</mat-label>
+              <input
+                matInput
+                type="password"
+                formControlName="confirmPassword" />
+              @if (form.get("confirmPassword").hasError("passwordMismatch")) {
+                <mat-error>Passwords do not match</mat-error>
+              } @else {
+                @if (
+                  form.get("confirmPassword").invalid &&
+                  form.get("confirmPassword").touched
+                ) {
+                  <mat-error>Password is missing or invalid</mat-error>
+                }
+              }
+            </mat-form-field>
+          </div>
+
+          <!-- Submit Button -->
+          <div class="col-md-12 text-center">
+            <button
+              mat-flat-button
+              color="primary"
+              class="mt-3"
+              [disabled]="form.invalid"
+              (click)="onSubmit(form.value)">
+              {{ isEditMode ? "Update My Profile" : "Register" }}
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
