--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 <app-navbar></app-navbar>
 <div id="page-container">
-  <div
-    id="content-wrap"
-    class="container">
+  <div id="content-wrap" class="container">
     <router-outlet></router-outlet>
   </div>
   <app-footer></app-footer>
