--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,12 +1,7 @@
-.footer-toolbar {
+mat-toolbar {
     margin: 0 auto;
     display: flex;
     justify-content: center;
     background-color: #f6f6fa;
 }
   
-  #footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-}
