--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,5 @@
-<footer id="footer">
+<footer>
   <mat-toolbar
-    class="footer-toolbar"
     role="contentinfo">
     <span>&copy; 2025 Home Finder Co. All rights reserved.</span>
   </mat-toolbar>
