--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -3,44 +3,49 @@
     <div class="col-md-6 col-lg-4">
       <div class="card shadow-lg p-4">
         <h4 class="text-center mb-4">Login</h4>
-        <form [formGroup]="form" class="row">
+        <form [formGroup]="form">
           <!-- Username -->
-          <div class="col-md-12">
-            <mat-form-field appearance="outline" class="w-100">
-              <mat-label>Username</mat-label>
-              <input matInput type="text" formControlName="userName" />
-              @if (form.get("userName").invalid && form.get("userName").touched) {
-                <mat-error>Username is required</mat-error>
-              }
-            </mat-form-field>
-          </div>
+          <mat-form-field
+            appearance="outline"
+            class="w-100">
+            <mat-label>Username</mat-label>
+            <input
+              matInput
+              type="text"
+              formControlName="userName" />
+            @if (form.get("userName").invalid && form.get("userName").touched) {
+              <mat-error>Username is required</mat-error>
+            }
+          </mat-form-field>
 
           <!-- Password -->
-          <div class="col-md-12">
-            <mat-form-field appearance="outline" class="w-100">
-              <mat-label>Password</mat-label>
-              <input matInput type="password" formControlName="password" />
-              @if (form.get("password").invalid && form.get("password").touched) {
-                <mat-error>Password is missing or invalid</mat-error>
-              }
-            </mat-form-field>
-          </div>
+          <mat-form-field
+            appearance="outline"
+            class="w-100">
+            <mat-label>Password</mat-label>
+            <input
+              matInput
+              type="password"
+              formControlName="password" />
+            @if (form.get("password").invalid && form.get("password").touched) {
+              <mat-error>Password is missing or invalid</mat-error>
+            }
+          </mat-form-field>
 
           <!-- Submit Button -->
-          <div class="col-md-12 text-center">
+          <div class="text-center">
             <button
               mat-flat-button
               color="primary"
               class="w-100"
               [disabled]="form.invalid"
-              (click)="onSubmit(form.value)"
-            >
+              (click)="onSubmit(form.value)">
               Login
             </button>
           </div>
 
           <!-- Signup Link -->
-          <div class="col-md-12 text-center">
+          <div class="text-center">
             <span>
               Don't have an account? Click
               <a [routerLink]="['/signup']">here</a>
