--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -19,7 +19,7 @@
       </div>
 
       <!-- Welcome Dropdown (Moved to End) -->
-      <div class="dropdown">
+      <div class="dropdown me-3">
         <span
           class="text-light dropdown-toggle"
           id="userDropdown"
