added about us page

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -16,26 +16,26 @@
 
   <!-- Main Content -->
   <div class="container main-content">
-    <div class="my-3 d-flex justify-content-between align-items-center">
-
-      <mat-form-field appearance="outline">
-        <mat-label>Sort by</mat-label>
-        <mat-select
-          [(ngModel)]="sortOrder"
-          (selectionChange)="onSortChange($event.value)">
-          <mat-option value="desc">Newest</mat-option>
-          <mat-option value="asc">Oldest</mat-option>
-        </mat-select>
-      </mat-form-field>
-            <!-- Filter Icon -->
-      <mat-icon
-        class="material-icons-outlined"
-        (click)="openFilterDrawer()"
-        aria-hidden="false"
-        aria-label="Filter"
-        fontIcon="filter_list"></mat-icon>
-
-    </div>
+    @if (properties.length) {
+      <div class="my-3 d-flex justify-content-between align-items-center">
+        <mat-form-field appearance="outline">
+          <mat-label>Sort by</mat-label>
+          <mat-select
+            [(ngModel)]="sortOrder"
+            (selectionChange)="onSortChange($event.value)">
+            <mat-option value="desc">Newest</mat-option>
+            <mat-option value="asc">Oldest</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <!-- Filter Icon -->
+        <mat-icon
+          class="material-icons-outlined"
+          (click)="openFilterDrawer()"
+          aria-hidden="false"
+          aria-label="Filter"
+          fontIcon="filter_list"></mat-icon>
+      </div>
+    }
 
     @if (filteredProperties.length) {
       <div class="row">
