--- a/src/app/components/unauthorized/unauthorized.component.html
+++ b/src/app/components/unauthorized/unauthorized.component.html
@@ -1,4 +1,4 @@
-<div class="text-center">
+<div class="text-center mt-5">
     <h1 class="display-4">401 - Unauthorized</h1>
     <p class="lead">You do not have permission to view this page.</p>
     <a [routerLink]="['/home']"  routerLink="active" class="btn btn-primary">Back to Home</a>
