--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -2,9 +2,9 @@
   <h1 class="text-center mb-4">About Us</h1>
 
   <section class="mb-5">
-    <h2>Welcome to Property Finder</h2>
+    <h2>Welcome to Home Finder</h2>
     <p>
-      Property Finder is an innovative platform that connects property seekers
+      Home Finder is an innovative platform that connects property seekers
       with property owners. Whether you're looking to rent or buy a home, our
       application allows you to easily search for properties in various
       locations.
@@ -19,7 +19,7 @@
   <section class="mb-5">
     <h3>Search for Properties</h3>
     <p>
-      With Property Finder, you can easily search for properties available for
+      With Home Finder, you can easily search for properties available for
       rent or sale. You can filter properties by location, price range, number
       of bedrooms, and other criteria to help you find the best matches.
     </p>
@@ -32,7 +32,7 @@
   <section class="mb-5">
     <h3>List Your Property</h3>
     <p>
-      Property Finder also allows property owners to list their properties for
+      Home Finder also allows property owners to list their properties for
       rent or sale. If you have a property you would like to rent or sell,
       simply log in to your account and start creating your listing. Our
       easy-to-use interface will guide you through the process.
