--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -2,9 +2,10 @@
   <!-- Brand Section -->
   <a
     role="button"
-    class="navbar-brand ms-3"
-    routerLink="">
+    class="navbar-brand ms-3 d-flex align-items-center"
+    routerLink="home">
     Home Finder
+    <mat-icon class="ms-2 ">home</mat-icon>
   </a>
 
   <!-- Right Section -->
